Momentum scrolling works properly with z-index [Fixes #43]

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ canvas {
 body {
     padding: 0;
     margin: 0;
+    -webkit-overflow-scrolling: touch;
 }
 
 @font-face {
